client/src/theme/styles/components/global/forms/_form-inputs-primary.scss
/* ... */
.form-switch {
  position: relative;
  display: block;
  cursor: pointer;

  input {
    position: absolute;
    z-index: -1;
    opacity: 0;

    &:focus-visible ~ .toggle-indicator .boolean-primary {
      @include defaultFocusStyle;
      outline-color: $defaultFocusColor;
      outline-offset: 2px;
    }
  }
}

// Form Date Input
// --------------------------
.form-date {
  .input-day {
    margin-left: 15px;
  }

  .form-input {
    position: relative;
    display: inline-block;
    margin-left: 15px;
    vertical-align: bottom;

    .input-year {
      .form-primary & {
        display: inline;
        width: calc(91vw - 242px);
        min-width: 49px;
        max-width: 100px;

        @include respond($break40) {
          width: calc(91vw - 372px);
        }
      }
    }
  }
}

// Form DatePicker
// --------------------------
.form-date-picker {
  position: relative;

  &__button {
    @include utilityPrimary;
    @include buttonUnstyled;
    position: absolute;
    right: 0;
    bottom: 1em;
    z-index: 10;
    font-size: 12px;

    @include respond($break60) {
      bottom: 1.45em;
    }
  }

  .react-datepicker {
    @include templateHead;
    @include boxShadow;
    color: $neutralTextLight;
    background-color: transparent;
    border: none;

    &-wrapper {
      width: 100%;
    }

    &__triangle {
      display: none;
    }

    &__navigation {
      top: 9px;
      width: auto;
      height: auto;
      font-size: 16px;
      line-height: 1;
      text-indent: unset;
      background-color: transparent;
      border: none;

      &--previous {
        left: 20px;
      }

      &--next {
        right: 20px;
      }
    }

    &__input-container {
      display: block;
      margin-top: -12px;
    }

    &__close-icon {
      display: none;
    }

    &__header {
      background-color: $neutral110;
      border: none;
    }

    &__current-month {
      color: $neutralTextExtraLight;
    }

    &__day-name {
      color: inherit;
    }

    &__month-container {
      background-color: $neutral95;
      border-radius: 8px;
    }

    &__day {
      height: 1.7rem;
      color: inherit;
      border: 1px solid transparent;
      border-radius: 50%;
      transition:
        color $duration $timing,
        border-color $duration $timing,
        background-color $duration $timing;

      &--keyboard-selected, &--selected {
        @include defaultHoverStyle;
        background-color: $neutral80;
      }

      &:hover {
        @include defaultHoverStyle;
        background-color: $neutral90;
      }
    }
  }
}

// Form Callout
// --------------------------
.form-callout {
  padding: 54px 30px;
  background-color: $neutral10;

  header {
    @include formLabelPrimary;
    padding-bottom: 53px;
    text-align: center;
  }

  + .form-input {
    margin-top: 40px;
  }
}
/* ... */

